--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-emotion": "^11.0.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.22"
   }
 }
