--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "babel-plugin-emotion": "^11.0.0",
+    "bootstrap": "^5.1.3",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
